plugins {
    id 'java'
    id "io.freefair.lombok" version "8.4"
}

group = 'org.example'
version = '1.0-SNAPSHOT'

test {
    jvmArgs = ["--add-opens", "java.base/java.time=ALL-UNNAMED"]
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'com.google.code.gson:gson:2.10.1'

    testImplementation platform('org.junit:junit-bom:5.9.1')
    testImplementation 'org.junit.jupiter:junit-jupiter'
    testImplementation("org.junit.jupiter:junit-jupiter-api")
    testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
    testImplementation("org.junit.jupiter:junit-jupiter-params")

    testImplementation 'org.assertj:assertj-core:3.24.2'

}

test {
    useJUnitPlatform()
}